fix: teaser text being cut off

--- a/static/style.less
+++ b/static/style.less
@@ -26,6 +26,7 @@
 				p {
 					max-width: 200px;
 					white-space: normal;
+					margin: 0;
 				}
 			}
 			.footer {
